Fix vertical alignment in deployments table

--- a/src/styles/components/deployments-table.less
+++ b/src/styles/components/deployments-table.less
@@ -1,10 +1,7 @@
 .deployments-table {
 
   td {
-    vertical-align: bottom;
-    &.align-top {
-      vertical-align: top;
-    }
+    vertical-align: top;
   }
 
   .deployment-services-list,
@@ -29,6 +26,15 @@
     .text-overflow;
   }
 
+  .deployment-location-list {
+    padding-top: 25px;
+  }
+
+  .deployment-location-list li,
+  .deployment-status-list li {
+    margin-bottom: 0;
+  }
+
   .deployment-breadcrumb {
     .breadcrumbs {
       .text-overflow;
@@ -49,6 +55,7 @@
   }
 
   .deployment-step {
+    display: inline-block;
     margin-bottom: 8px;
   }
   .deployment-status-list {
